Code/default/ingressDefault.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: [ContainerName]-ingress
spec:
  tls:
  - hosts:
    - [ContainerHost]
    secretName: website-tls
  rules:
  - host: [ContainerHost]
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: [ContainerName]-lb
            port:
              number: [ContainerPort]
